tests/baselines/reference/parserClassDeclaration6.errors.txt
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration6.ts(1,9): error TS1026: A class can only extend a single class.


==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration6.ts (1 errors) ====
    class C extends A, B {
            ~~~~~~~
!!! error TS1026: A class can only extend a single class.
    }